lab1/Test/L1-A-9-92.cmm
int Xh6i2iyv 
;
float ;
struct j5VA DDRXpb3G1SH , jY_eOMqQSz3 

;
struct ZNor8 H ( ) {
  struct omfeTw {
    struct KVNWvYJ1hlgo7eFQlZ GKel7UaweRI75S6SwE62 
      , VN5iJh84FDqYueaPrXD ;
  }TiQIc4P [ 803619015 ] = kKkcCz3 || fD3KIhSPpJ && 
    GlYJ != ( kigbESMT = v8qoA4WpfBpP9EgsN751 <= Nkvrx3sFYsceMR04usgK 
    + sEGfpndjB / ! - hspliQmJPJlJg ( LGLpps76cT , IqdWn1PSk 
    = LE3 || hsJnRV6aswmWpB < YqIefNb0QKad7U - USVE07hp 
    ! CWf [ f_El && nSpOu > V99fGISF2XuNt8p ( D2YX_a2 
    , h89 * XCIXShCsvMW4pHBvC4E [ nC7FWFqg9 = k == I2hnFr4cvMbMkmmV 
    - - w6f9n1Co22ytf * 1891124395 . k5Vmi71 ] / 190243937.2136385421 
    ) >= krdHz7e1QkNvtlFZ ( ) ] ) ) . UtTM ;
}
int t6oGwtk ( int CL16yLdZwLH ) {
  tEVB3QXekYJv_h0 ;
  dwIDLUHlWM_ZsA ;
  if ( RMmwGyAYTB_E1lNEJo )   FTjgpVT3NYRi5H3f ;
else   if ( DgCTOU6TQKk5Y )   if ( RzMPwBXPIimmNRHMk610 
    )   if ( _0q_EVCJY6dPbR )   m9wFsB ;
else {
    JzSM8dbpnMOSjMx ;
    if ( cYQpp8HL )     if ( Upc )     X0RhdInJ ;
else     if ( yfUHq9wnXP )     while ( gI8HvIwQi ) 
      {
      int HLHajvTq8owLf6w ;
      struct {
        struct K9RrcdYhz892 gctYvBp0eOxOHFZV 
        int NbAp9eo ;
      }VPF5YQko4rAh ;
      QyRDwUR7 ;
      DBbbh ;
      ZPmuUAK23FPR89hLU ;
    }
else     if ( F9PRWJWBWp0KiF9J )     dcKzYXV5nYQ ;




    while ( CCigwb4_aH1uGxKj12Q )     gNSlGQ072VCM 
      ;

    return Zh53fAt2dpuFnXGaSQV_ ;
  }



  if ( A5GsZ )   H8uI_ ;

}
int ;
int QokrhpiieGFLX ( int , int DDwtw1Oc1V ) {
}
int wAsnGvUzQJ1LhupeCsb ( ) {
}
int ;
